--- a/templates/todo/today.html
+++ b/templates/todo/today.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Things to do:</h1>
+    <h1>Things to do today:</h1>
     <table>
         {% for item in object_list %}
         <tr>
             <td>{{ item.text }}</td>
-            <td>{{ item.due_date }}</td>
         </tr>
         {% endfor %}
     </table>
